packages/react/components/StoryModal/StoryModal.scss
@keyframes indicator {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.StorySdkModal {
  display: none;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  z-index: 999;
  box-sizing: border-box;

  background: #18182E;
  // opacity: 0.9;
  justify-content: center;
  align-items: flex-start;

  &::after {
    content: "";
    position: absolute;
    width: 100%;
    height: 100vh;
    background: #18182E;
    top: 0;
    left: 0;
    z-index: 1;
  }

  @media (min-width: 768px) {
    min-height: auto;
    align-items: center;
    // min-height: 694px;
    height: 100%;
  }

  & * {
    box-sizing: border-box;
  }

  &_isShowing {
    display: flex;
    justify-content: center;
    padding: 10px 0;
  }

  &__controls {
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 50px;
    gap: 8px;
    grid-template-areas: "indicators indicators"
                          "group close";
    padding: 0 8px;
  }

  &__body {
    position: relative;
    display: flex;
    z-index: 2;
    height: 100%;
    width: 100%;

    @media (min-width: 768px) {
      width: auto;
      padding: 0;
      justify-content: center;
    }
  }

  &__bodyContainer {
    position: relative;

    &_black {
      &::after {
        z-index: -1;
        content: "";
        border-radius: inherit;
        position: absolute;
        top: 0;
        left: 50%;
        transform: translateX(-50%);
        height: 100%;
        width: 96%;
        background-color: #000000;
      }
      
    }
  

    @media (max-width: 768px) {
      width: 100%;
    }
  }

  &__group {
    display: flex;
    align-items: center;
    grid-area: group;
  }

  &__statusBar {
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    padding: 0 16px;
  }

  &__bottomMockImg {
    width: 100%;
  }

  &__bottomMock {
    width: 100%;
    position: absolute;
    left: 0;
    bottom: 0;
    padding: 0 20px;
    padding-bottom: 20px;
  }

  &__groupImgWrapper {
    width: 39px;
    height: 39px;
    margin-right: 10px;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;

    background: linear-gradient(146.12deg, #FF0198 29.78%, #B90AE0 80.67%);

    @media (min-width: 768px) {
      width: 35px;
      height: 35px;
    }
  }

  &__groupImg {
    border-radius: 50%;
    width: 35px;
    height: 35px;
    max-height: 35px;

    border: 1px solid white;
    box-sizing: border-box;
    object-fit: cover;

    @media (min-width: 768px) {
      width: 31px;
      height: 31px;
      max-height: 31px;
    }
  }

  &__groupTitle {
    color: #fff;
    font-size: 14px;
    font-weight: 700;
    margin: 0;
    text-shadow: 0px 0px 10px rgba(24, 24, 46, 0.3);

    @media (min-width: 768px) {
      font-size: 13px;
    }
  }

  &__story {
    display: none;

    width: 100%;
    height: 100%;

    &_current {
      display: block;
    }
  }

  &__swiper {
    position: relative;
    width: 100%;
    height: 100%;
    border-radius: 8px;
    overflow: hidden;

    @media (max-width: 768px) {
      border-radius: 0;
    }

    &_mockup {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      z-index: 1;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
    }

    &_small {
      margin-top: -1px;
    }
  }

  &__swiperContent {
    display: flex;
    width: 100%;
    height: 100%;
  }

  &__indicator {
    position: relative;
    width: 100%;
    height: 2px;
    border-radius: 5px;
    background: rgba(255, 255, 255, 0.3);

    &:not(:last-child) {
      margin-right: 4px;
    }

    &_filled {
      background: rgba(255, 255, 255, 0.75);
    }

    &_current::after {
      position: absolute;
      display: block;
      left: 0;
      top: 0;
      content: "";
      height: 2px;
      border-radius: 5px;
      background: rgba(255, 255, 255, 0.75);
      animation: indicator 7s linear;
    }
  }

  &__indicators {
    width: 100%;
    display: flex;
    box-sizing: border-box;
    grid-area: indicators;

    &_stopAnimation {
      .StorySdkModal__indicator_current::after {
        animation-play-state: paused;
      }
    }
  }

  &__close {
    grid-area: close;
    border: 0;
    padding: 0;
    background: none;
    height: 24px;
    width: 24px;
    cursor: pointer;
    justify-self: flex-end;

    &_general {
      top: 10px;
      right: 8px;
      position: absolute;

      @media (max-width: 768px) {
        top: 18px;
      }
    }
  }

  &__navStories {
    position: absolute;
    top: 48px;

    &_next {
      right: 0;
    }

    &_preview {
      left: 0;
    }
  }

  &__arrowButton {
    display: flex;
    align-items: center;

    width: 15%;
    border: 0;
    background: none;
    padding: 0;
    cursor: pointer;
    position: absolute;
    z-index: 99999;

    top: 70px;
    left: 0;
    height: 80%;

    &_right {
      right: 0;
      left: auto;
      justify-content: flex-end;
    }

    &>svg {
      display: none;
    }

    @media (min-width: 768px) {
      width: 72px;
      position: static;
      height: auto;

      &>svg {
        display: block;
      }
    }
  }

  &__mockup {
    width: auto;
    height: 100%;
  }

  &__topContainer {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    display: flex;
    z-index: 99999;
    flex-direction: column;
  }
}

